[gd_scene load_steps=17 format=3 uid="uid://cuwkrkhbps5yh"]

[ext_resource type="Script" path="res://src/pnj/villageois/villageois.gd" id="1_r7pnd"]
[ext_resource type="Texture2D" uid="uid://br54r5jj6exxo" path="res://assets/sprites/reaction/chatting3.png" id="2_7c68a"]
[ext_resource type="Texture2D" uid="uid://ckjonnvsucfvf" path="res://assets/sprites/shadow.png" id="3_t06qg"]
[ext_resource type="SpriteFrames" uid="uid://drt3mrklfafnv" path="res://src/pnj/villageois/sprite_frames/villageois1.tres" id="4_v0kep"]
[ext_resource type="Script" path="res://src/utils/state_machine/state_machine.gd" id="5_i77nq"]
[ext_resource type="Script" path="res://src/pnj/states/villageois/idle.gd" id="6_pt0m2"]
[ext_resource type="Script" path="res://src/pnj/states/villageois/laughing.gd" id="7_yauqa"]
[ext_resource type="Script" path="res://src/pnj/states/common/wandering.gd" id="8_opsj1"]
[ext_resource type="Script" path="res://src/pnj/states/villageois/chatting.gd" id="9_4s2d4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_82vvv"]
radius = 13.0
height = 47.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6o3bs"]
radius = 350.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vp0lw"]
radius = 39.5
height = 89.0

[sub_resource type="Animation" id="Animation_y3yko"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_1pj1u"]
resource_name = "glissing_left"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1.1, 1.5),
"transitions": PackedFloat32Array(0.406126, 1, 1, 1),
"update": 0,
"values": [0.0, 1.5708, 1.5708, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1.1, 1.5),
"transitions": PackedFloat32Array(0.554785, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-100, 0), Vector2(-100, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_4o28d"]
resource_name = "glissing_right"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1.1, 1.5),
"transitions": PackedFloat32Array(0.406126, 1, 1, 1),
"update": 0,
"values": [0.0, -1.5708, -1.5708, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1.1, 1.5),
"transitions": PackedFloat32Array(0.554785, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(100, 0), Vector2(100, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8xgd7"]
_data = {
"RESET": SubResource("Animation_y3yko"),
"glissing_left": SubResource("Animation_1pj1u"),
"glissing_right": SubResource("Animation_4o28d")
}

[node name="Villageois" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 11
motion_mode = 1
slide_on_ceiling = false
wall_min_slide_angle = 0.0
script = ExtResource("1_r7pnd")

[node name="Pivot2" type="Marker2D" parent="."]
position = Vector2(0, -196)

[node name="Sprite2D" type="Sprite2D" parent="Pivot2"]
visible = false
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_7c68a")

[node name="ShadowSprite" type="Sprite2D" parent="."]
position = Vector2(4, -4)
scale = Vector2(0.09375, 0.09375)
texture = ExtResource("3_t06qg")

[node name="Pivot" type="Marker2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Pivot"]
position = Vector2(0, -84)
scale = Vector2(0.15, 0.15)
sprite_frames = ExtResource("4_v0kep")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_82vvv")

[node name="LaughingArea" type="Area2D" parent="."]
position = Vector2(0, 60)
collision_layer = 64
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="LaughingArea"]
position = Vector2(0, -60)
shape = SubResource("CircleShape2D_6o3bs")
debug_color = Color(0, 0.639216, 0.352941, 0.419608)
metadata/_edit_lock_ = true

[node name="VillageoisDetector" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="VillageoisDetector"]
position = Vector2(-1, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_vp0lw")
debug_color = Color(0.964706, 0.113725, 0.368627, 0.419608)
metadata/_edit_lock_ = true

[node name="RayCasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="RayCasts"]
position = Vector2(0, 13)
target_position = Vector2(0, 100)

[node name="RayCast2D2" type="RayCast2D" parent="RayCasts"]
position = Vector2(-23, 0)
target_position = Vector2(0, 100)

[node name="RayCast2D3" type="RayCast2D" parent="RayCasts"]
position = Vector2(24, 0)
target_position = Vector2(0, 100)

[node name="RayCast2D4" type="RayCast2D" parent="RayCasts"]
position = Vector2(0, -14)
target_position = Vector2(0, 100)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("5_i77nq")
state = NodePath("Wandering")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("6_pt0m2")

[node name="Wandering" type="Node" parent="StateMachine"]
script = ExtResource("8_opsj1")

[node name="Laughing" type="Node" parent="StateMachine"]
script = ExtResource("7_yauqa")

[node name="Chatting" type="Node" parent="StateMachine"]
script = ExtResource("9_4s2d4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8xgd7")
}

[connection signal="area_entered" from="VillageoisDetector" to="." method="_on_villageois_detector_area_entered"]
